# filterring

./: CMakeLists.txt  FileReader.cpp  FileReader.h  FileWriter.cpp  FileWriter.h  Image.cpp  Image.h  Pixel.cpp  Pixel.h  Quantizer.cpp  Quantizer.h  QuantizerDecoder.cpp  QuantizerDecoder.h  QuantizerEncoder.cpp  QuantizerEncoder.h  gTest.cpp
